--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
 kotlin.code.style=official
-kotlin.code.style=official
+group=world.cepi.particle
+version=1.0.0
+name=Particlable
+mainClass=ParticlableExtension
