Switch to common

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -27,4 +27,4 @@ jobs:
           title: "Development Build"
           files: |
             LICENSE.md
-            extension/build/libs/*.jar
+            common/build/libs/*.jar
