--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,7 @@
 before_install:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
-  - source install-jdk.sh --feature 16
-  - jshell --version
+  - source "$HOME/.sdkman/bin/sdkman-init.sh"
+  - sdk update
+  - sdk install java 17-open
+  - sdk use java 17-open
+install:
+  - ./gradlew clean common:build publishToMavenLocal
