--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,8 @@
-jdk:
-  - openjdk17
+before_install:
+  - source "$HOME/.sdkman/bin/sdkman-init.sh"
+  - sdk update
+  - sdk install java 17-open
+  - sdk use java 17-open
+  - chmod +x ./gradlew
+install:
+  - ./gradlew clean build publishToMavenLocal
